--- a/Assignments/A2/Solution.ipynb
+++ b/Assignments/A2/Solution.ipynb
@@ -1060,7 +1060,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The research question of theKossinets & Watts (2009) paper is: What could explain the mechanism of homophily generation in a dynamic social network?\n",
+    "The question proposed and answered by the Kossinets & Watts (2009) paper is: What could explain the mechanism of homophily generation in a dynamic social network?\n",
     "\n",
     "\n",
     "Kossinets & Watts (2009) merged three databases to cover \"interaction, affiliation, and attribute-type longitudinal data\" of 30396 individuals. These personnels are students, professors, and staff affilated with one large American university, who were active school email users in that academic year (Kossinets & Watts, 2009, p. 410). \n",
@@ -1073,7 +1073,7 @@
     "\n",
     "One potential problem about the dataset is that they exclusively select the email acocunts linked with the central server. Kossinets & Watts (2009) address the problem that department-specified email accounts such as \"xyz@department.university.edu\" are hard to match with the individuals, thus they provide no value for the analysis. Another fact is that many people might choose to use their own email account such as \"@gmail.com\" for communciations with others for better functionalities. Although these records are much harder to obtain, excluding them from the analysis might make the analysis of small social network incomplete and biased.\n",
     "\n",
-    "Matching the email-logs and characteristics of the senders and receivers to construct \"social relationship\" is a challenge task. E-mail exchanges comprise discrete and intermittent “spike trains” that are often “bursty” in nature (Cortes et al. 2003). It probably couldn't track the exact timing of the tie formation. To address this issue, Kossinets & Watts (2009, p. 413) introduced the \"sliding window filter\" model to approximate short-time network from \"discrete dyadic interactions\". \n",
+    "Matching the email-logs and characteristics of the senders and receivers to construct \"social relationship\" is a challenge task. Cortes et al. (2003) argue that E-mail exchanges comprise discontinuous “spike trains” which don't reflect the reality. It probably couldn't track the exact timing of the tie formation. To address this issue, Kossinets & Watts (2009, p. 413) introduced the \"sliding window filter\" model to approximate short-time network from \"discrete dyadic interactions\". \n",
     "\n",
     "\n"
    ]
