Update Answers for Q1&Q2.ipynb

--- a/Assignments/A7/Answers for Q1 and Q2/Answers for Q1&Q2.ipynb
+++ b/Assignments/A7/Answers for Q1 and Q2/Answers for Q1&Q2.ipynb
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](2c.jpg)"
+    "![title](2c.JPG)"
    ]
   },
   {
